Feature/job post f (#51)
* refactor: Using Abstract Class

* style: Dto -> Dtos